# openDTAM

./: .gitignore  CMakeLists.txt  README.md  ip_camera.launch  manifest.xml
cfg/: openDTAM.cfg
data/: camera_poses.csv  camera_settings_ahanda.yaml  camera_settings_orb_slam.yaml  camera_settings_phone_camera.yaml  openDTAM-settings.yaml  openDTAM_settings_ahanda.yaml  openDTAM_settings_blender.yaml  openDTAM_settings_blender_matlab.yaml  openDTAM_settings_oneplusone.yaml  orb_slam_launch.launch
src/blender_model/: blender_camera_pose_save.py  blender_play_on_msg.py  camera_poses.csv  cube_within_three_planes.blend  cube_within_three_planes.blend1  cube_within_three_planes.blend2  cube_within_three_planes_color-600-frames.blend  cube_within_three_planes_color-600-frames.blend1  cube_within_three_planes_color.blend  cube_within_three_planes_color.blend1  cube_within_three_planes_color.blend2  cube_within_three_planes_color.csv  cube_within_three_planes_color_temp.csv
src/dense-mapping/: CMakeLists.txt  DenseMapper.cpp  DenseMapper.hpp  DepthEstimator.cpp  DepthEstimator.hpp  bag_play_on_msg.py  blender_play_on_msg.py  dense-mapping-orbslam-tracking.cpp  pcl_camera_parameters.txt  test-mapping-orbslam-tracking.cpp  testmapper.cpp  video_play_on_msg.py
src/dense-mapping/CostVolume/: CostVolume.cpp  CostVolume.cuh  CostVolume.hpp  CostVolume_minimizeA.cu  CostVolume_update.cu
src/dense-mapping/CostVolume/tests/: CMakeLists.txt
src/dense-mapping/CostVolume/tests/src/: backproject_point.m  computeAhandaZ.m  getcamK_simplified.m  project_point.m  test-depth-estimation.cpp  test-multiple-images-ahanda.cpp  test-multiple-images.cpp  testTexture.cuh  test_depth_estimation.m  test_multiple_images.m  test_multiple_images_ahanda.m  test_texture.cu
src/dense-mapping/Regulariser/: Regulariser.cpp  Regulariser.cuh  Regulariser.hpp  Regulariser_computeG.cu  Regulariser_update_q_d.cu
src/dense-mapping/Regulariser/tests/: CMakeLists.txt  computeG.cu  computeG.cuh  test_computeG.cpp  test_update_qd.cpp  update_qd.cu  update_qd.cuh
src/utils/: convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h
